# sessioniq

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yaml
data/processed/: demo_catalog.parquet  demo_sessions.parquet
scripts/: prepare_demo_data.py
src/sessioniq/app/: app.py
src/sessioniq/llm/: fallback.py  prompt_builder.py
src/sessioniq/models/: evaluation.py  intent.py  tuning.py
src/sessioniq/pipeline/: features.py  loader.py
src/sessioniq/recommender/: two_tower.py
tests/unit/: test_features.py
