[project]
name = "sessioniq"
version = "0.1.0"
description = "End-to-end ML system for e-commerce session analysis: sequential intent prediction, two-tower recommendations, and LLM-powered real-time nudges."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "nicolasallerponte" }]
keywords = ["machine-learning", "ecommerce", "recommendation-system", "intent-prediction", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Data
    "polars>=1.0.0",
    "pyarrow>=14.0.0",
    "duckdb>=0.10.0",
    # ML
    "scikit-learn>=1.4.0",
    "lightgbm>=4.3.0",
    # Recommender
    "faiss-cpu>=1.8.0",
    "implicit>=0.7.2",
    # LLM
    "openai>=1.30.0",
    "google-generativeai>=0.7.0",
    # App
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    # Utils
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "joblib>=1.4.0",
    "shap>=0.46.0,<0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sessioniq"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/sessioniq --cov-report=term-missing"
